v5.1
  - Registration token and runner token are named differently
  - Redirect to previous page after sign-in
  - Dont show archived projects
  - Add support for skip branches from build
  - Add coverage parsing feature
  - Update rails to 4.0.10

v5.0.1
  - Update rails to 4.0.5

v5.0.0
  - Set build timeout in minutes
  - Web Hooks for builds
  - Nprogress bar
  - Remove extra spaces in build script
  - Requires runner v5
    * All script commands executed as one file
    * Cancel button works correctly now
    * Runner stability increased
    * Timeout applies to build now instead of line of script

v4.3.0
  - Refactor build js
  - Redirect to build page with sha + bid if build id is not provided
  - Update rails to 4.0.3
  - Restyle project settings page
  - Improve help page
  - Replaced puma with unicorn
  - Improved init.d script
  - Add submodule init to default build script for new projects

v4.2.0
  - Build duration chart
  - Bootstrap 3 with responsive UI
  - Improved init.d script
  - Refactoring
  - Changed http codes for POST /projects/:id/build action
  - Turbolinks

v4.1.0
  - Rails 4
  - Click on build branch to see other builds for this branch
  - Email notifications (Jeroen Knoops)

v4.0.0
  - Shared runners (no need to add runner to every project)
  - Admin area (only available for GitLab admins)
  - Hide all runners management into admin area
  - Use http cloning for builds instead of deploy keys
  - Allow choose between git clone and git fetch when get code for build
  - Make build timeout actually works
  - Requires GitLab 6.3 or higher
  - GitLab CI settings go to GitLab project via api on creation

v3.2.0
  - Limit visibility of projects by gitlab authorized projects
  - Use one page for both gitlab and gitlab-ci projects

v3.1.0
  - Login with both username, email or LDAP credentials (if GitLab 6.0+)
  - Retry build button functionality
  - UI fixes for resolution 1366px and lower
  - Fix gravatar ssl warning

v3.0.0